[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/Theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/phased-1.2/phased_font_l.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/phased-1.2/phased_font_s.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="GameOverScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -80.0
margin_bottom = 123.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1200.0
margin_bottom = 843.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 843.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CenterContainer"]
margin_left = 240.0
margin_top = 168.0
margin_right = 960.0
margin_bottom = 673.8
rect_min_size = Vector2( 720, 505.8 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer"]
margin_right = 720.0
margin_bottom = 505.8
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Padding" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 116.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 720.0
margin_bottom = 179.0
custom_colors/font_color = Color( 0, 0.858824, 0.376471, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
align = 1

[node name="Padding2" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 720.0
margin_bottom = 183.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 720.0
margin_bottom = 243.0
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 26.0
text = "Score:"

[node name="Spacer" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 184.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Score" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 188.0
margin_right = 200.0
margin_bottom = 26.0
text = "0"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 200.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 66.0
margin_bottom = 26.0
text = "Waves:"

[node name="Spacer" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 70.0
margin_right = 184.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="WaveCount" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 188.0
margin_right = 200.0
margin_bottom = 26.0
text = "0"
align = 2

[node name="Control2" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 720.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Padding3" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 720.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 2

[node name="PressAnyKey" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 291.0
margin_right = 720.0
margin_bottom = 317.0
text = "Press any key to try again."
align = 1

[node name="Padding5" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 720.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 365.0
margin_right = 720.0
margin_bottom = 385.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 237.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="LinkButton" type="LinkButton" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Zaven"

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 295.0
margin_right = 337.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = " and "

[node name="LinkButton2" type="LinkButton" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 341.0
margin_right = 380.0
margin_bottom = 20.0
focus_mode = 2
custom_fonts/font = ExtResource( 4 )
text = "Levi"

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 384.0
margin_right = 479.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = " made this."

[node name="Control2" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 483.0
margin_right = 720.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Padding4" type="Control" parent="MarginContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 720.0
margin_bottom = 505.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2/LinkButton" to="." method="_on_zaven_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2/LinkButton2" to="." method="_on_levi_pressed"]
